# Niti-ide

./: AUTHORS.md  README.md  package-lock.json  package.json
src/: App.tsx  CLI.tsx  Editor.tsx  FileDialog.tsx  MenuBar.tsx  SerialMonitor.tsx  Sidebar.tsx  TabBar.tsx
src-tauri/: Cargo.toml  new_file.rs  tauri.conf.json
src-tauri/src/: main.rs
