[package]
name = "niti-ide"
version = "0.1.0"
description = "The Niti IDE is a straightforward development environment designed for flashing the Niti framework onto Niti boards using Rust. The initial version supports the V2560 board, providing a user-friendly interface for writing, debugging, and deploying Rust code to efficiently work with the Niti framework."
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "fs-all", "shell-all", "dialog-all"] }
serde = { version = "1", features = ["derive"] }
serialport = "=4.5.0"
winapi = { version = "0.3", features = ["winbase", "setupapi", "cfgmgr32", "guiddef", "minwinbase"] }

serde_json = "1"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
